--- a/css/style.css
+++ b/css/style.css
@@ -419,27 +419,37 @@ body main .container-section1 .caja p {
 }
 
 /*V A R I A B L E S*/
-body main .section-contact {
+main .section-contact {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 60rem;
   display: grid;
   place-items: center;
   background-color: #ffffff;
 }
-body main .section-contact .contact-form {
+@media screen and (max-width: 650px) {
+  main .section-contact {
+    height: 70rem;
+  }
+}
+main .section-contact .contact-form {
   position: relative;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(500px 1fr));
   gap: 20px;
   padding: 40px;
   width: 90%;
-  height: 90%;
+  height: 60rem;
   background: #dbd9d9;
   box-shadow: 1px 9px 20px -5px rgba(0, 0, 0, 0.59);
   border-radius: 30px;
 }
-body main .section-contact .contact-form .form {
+@media screen and (max-width: 650px) {
+  main .section-contact .contact-form {
+    height: 70rem;
+  }
+}
+main .section-contact .contact-form .form {
   position: relative;
   display: flex;
   justify-content: center;
@@ -448,30 +458,30 @@ body main .section-contact .contact-form .form {
   width: 85%;
   margin-left: 30px;
 }
-body main .section-contact .contact-form .form .texto h3 {
+main .section-contact .contact-form .form .texto h3 {
   color: #504b37;
   font-size: 2.5rem;
   margin-bottom: 10px;
 }
-body main .section-contact .contact-form .form .texto p {
+main .section-contact .contact-form .form .texto p {
   font-size: 1.5rem;
   color: #3b4455;
   line-height: 1.5;
   margin-bottom: 20px;
 }
-body main .section-contact .contact-form form {
+main .section-contact .contact-form form {
   width: 100%;
 }
-body main .section-contact .contact-form form .input-box {
+main .section-contact .contact-form form .input-box {
   display: flex;
   flex-direction: column;
   margin-bottom: 15px;
 }
-body main .section-contact .contact-form form .input-box label {
+main .section-contact .contact-form form .input-box label {
   color: #3b4455;
   font-weight: 700;
 }
-body main .section-contact .contact-form form .input-box input[type=text] {
+main .section-contact .contact-form form .input-box input[type=text] {
   border: none;
   background: #ffffff;
   padding: 10px;
@@ -479,7 +489,7 @@ body main .section-contact .contact-form form .input-box input[type=text] {
   color: #3b4455;
   resize: none;
 }
-body main .section-contact .contact-form form .input-box input[type=email] {
+main .section-contact .contact-form form .input-box input[type=email] {
   border: none;
   background: #ffffff;
   padding: 10px;
@@ -487,7 +497,7 @@ body main .section-contact .contact-form form .input-box input[type=email] {
   color: #1766a3;
   resize: none;
 }
-body main .section-contact .contact-form form .input-box textarea {
+main .section-contact .contact-form form .input-box textarea {
   border: none;
   background: #ffffff;
   padding: 10px;
@@ -495,16 +505,16 @@ body main .section-contact .contact-form form .input-box textarea {
   color: #1766a3;
   resize: none;
 }
-body main .section-contact .contact-form form .input-box input[type=text]:focus {
+main .section-contact .contact-form form .input-box input[type=text]:focus {
   outline: 2px solid #1766a3;
 }
-body main .section-contact .contact-form form .input-box input[type=email]:focus {
+main .section-contact .contact-form form .input-box input[type=email]:focus {
   outline: 2px solid #1766a3;
 }
-body main .section-contact .contact-form form .input-box textarea:focus {
+main .section-contact .contact-form form .input-box textarea:focus {
   outline: 2px solid #1766a3;
 }
-body main .section-contact .contact-form form .input-box input[type=submit] {
+main .section-contact .contact-form form .input-box input[type=submit] {
   background-color: #1766a3;
   display: inline-block;
   text-align: center;
@@ -517,7 +527,7 @@ body main .section-contact .contact-form form .input-box input[type=submit] {
   cursor: pointer;
   box-shadow: 1px 9px 20px -5px rgba(0, 0, 0, 0.59);
 }
-body main .section-contact .contact-form form .input-box input[type=submit]:hover {
+main .section-contact .contact-form form .input-box input[type=submit]:hover {
   background: #3b4455;
 }
 
